gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/foo10727b.d
version https://git-lfs.github.com/spec/v1
oid sha256:2574ca0d51b8afbcdb861461f7e22e7473349c51d95e5c11029b56c05d8fe523
size 356
